# prefect_project_template

./: Makefile
prefect_project_template/: cookiecutter.json
prefect_project_template/{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  {{cookiecutter.env_file}}
prefect_project_template/{{cookiecutter.project_slug}}/.github/workflows/: deploy-flow.yaml
prefect_project_template/{{cookiecutter.project_slug}}/deploy/: deployment.py  push_secrets.py  settings.py
prefect_project_template/{{cookiecutter.project_slug}}/deploy/secrets_manager/: __init__.py  blocks.py  git.py  github.py
prefect_project_template/{{cookiecutter.project_slug}}/src/: main.py  settings.py
prefect_project_template/{{cookiecutter.project_slug}}/src/core/: utils.py
prefect_project_template/{{cookiecutter.project_slug}}/src/utils/: logging.py  prefect.py
prefect_project_template/{{cookiecutter.project_slug}}/src/utils/requests/: __init__.py  exceptions.py  requests.py
